--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.5.0"
 core = "1.3.0"
 coreSplashscreen = "1.0.1"
 datastore = "1.1.1"
+firebaseBom = "33.1.2"
 foundation = "1.6.8"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -17,6 +18,8 @@ materialIconsExtended = "1.6.8"
 roomKtx = "2.6.1"
 navigationCompose = "2.7.7"
 uiTextGoogleFonts = "1.6.8"
+googleGmsGoogleServices = "4.4.2"
+firebaseAnalytics = "22.0.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +35,8 @@ calendar = { module = "com.maxkeppeler.sheets-compose-dialogs:calendar", version
 clock = { module = "com.maxkeppeler.sheets-compose-dialogs:clock", version.ref = "core" }
 core = { module = "com.maxkeppeler.sheets-compose-dialogs:core", version.ref = "core" }
 date-time = { module = "com.maxkeppeler.sheets-compose-dialogs:date-time", version.ref = "core" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -47,8 +52,10 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics", version.ref = "firebaseAnalytics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 
