--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ activityCompose = "1.9.0"
 composeBom = "2024.04.01"
 lottie = "6.3.0"
 materialIconsExtended = "1.6.8"
+review = "2.0.1"
+reviewKtx = "2.0.1"
 roomKtx = "2.6.1"
 navigationCompose = "2.7.7"
 uiTextGoogleFonts = "1.6.8"
@@ -53,6 +55,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics", version.ref = "firebaseAnalytics" }
+review = { module = "com.google.android.play:review", version.ref = "review" }
+review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "reviewKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
